使用 Colaboratory 创建

--- a/lesson1.ipynb
+++ b/lesson1.ipynb
@@ -36,6 +36,26 @@
     },
     {
       "metadata": {
+        "id": "GpCl7gcIUmBY",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "## Image classification with Convolutional Neural Networks"
+      ]
+    },
+    {
+      "metadata": {
+        "id": "S4_mQUQzXURQ",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "## Install Environment in Google Colab"
+      ]
+    },
+    {
+      "metadata": {
         "id": "q9XJryGoVgfJ",
         "colab_type": "code",
         "outputId": "5a6127c6-c071-41a6-8d86-91c9e9ef806b",
@@ -179,16 +199,6 @@
           ],
           "name": "stdout"
         }
-      ]
-    },
-    {
-      "metadata": {
-        "id": "GpCl7gcIUmBY",
-        "colab_type": "text"
-      },
-      "cell_type": "markdown",
-      "source": [
-        "## Image classification with Convolutional Neural Networks"
       ]
     },
     {
